# academic-hunter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  config.json  install.py  pyproject.toml  pytest.ini  requirements.txt  smithery.yaml
.gemini/: mcp.json
.github/workflows/: ci.yml  pages.yml  test.yml
archive/: BIBLIOGRAFIA_CIENTIFICA_4.0_20260617_130953.csv  LINKS_REVISAO.md  LINKS_REVISAO_20260617_120251.md  MAPA_DE_LEITURA_ELITE_20260617_122129.md  MAPA_QUALIFICADO_360_20260617_125320.md  PESQUISA_FINAL_360_20260617_125320.csv  RELATORIO_ASSERTIVO_20260617_121031.md  RELATORIO_MASTER_20260617_123817.md  RELATORIO_MASTER_20260617_124506.md  SUPER_PESQUISA_MESTRE_20260617_123817.csv  SUPER_PESQUISA_MESTRE_20260617_124506.csv  TESOURO_ACADEMICO_20260617_122129.csv  TESOURO_ELITE_V2_LIMPO.csv  pesquisa_arxiv_20260617_120251.csv  pesquisa_arxiv_consolidada.csv  pesquisa_assertiva_20260617_121031.csv  pesquisa_crossref_elite_20260617_123155.csv
conductor/: plan.md
docs/: _config.yml  core_engine.md  index.html  mcp_setup.md
docs/assets/css/: main.css  mcp-docs.css
docs/assets/js/: main.js  (+1 more)
docs/mcp/: index.html
docs/plugins/: screeners.md  standard.md  vector_stores.md
src/: academic_hunter.py
src/academic_hunter/: __init__.py  cli.py
tests/: conftest.py  test_rigor.py
tests/core/: test_deduplication.py  test_engine.py  test_features.py  test_pipeline.py  test_prisma.py  test_scorer.py  test_semantic_screener.py  test_weight_bleeding.py
tests/plugins/: test_api_connectivity.py  test_openalex.py
(+89 files in other folders)
